feat: added file bundle progress message